# Chess

./: CMakeLists.txt  README.md  main.c  main.h
BoardGame/: BoardGame.c  BoardGame.h
ChessGame/: ChessAI.c  ChessGame.c  ChessGame.h  ChessGameBoard.c  ChessGameBoard.h  ChessGameViewOutput.c  ChessGameViewOutput.h
DataStructs/: ArrayList.c  ArrayList.h
IO/: BasicErrorsHandling.c  BasicErrorsHandling.h  FileIO.c  FileIO.h  Parser.c  Parser.h
